added current admin API route
